# aegis-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
aegis_sdk/: __init__.py  aegis_protector.py
aegisproxy_sdk/: __init__.py
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: aegis-protector.ts.html  index.html  index.ts.html
examples/supabase/: README.md  crypto.ts  demo.ts  package-lock.json  package.json  persist-flow.ts  schema.sql
src/: aegis-protector.test.ts  aegis-protector.ts  cross-language.test.ts  index.ts
tests/: test_aegis_protector.py  test_cross_language_fixture.py  test_thread_safety.py
tests/fixtures/: export_v1.json
