[project]
name = "aegis-sdk"
version = "0.1.0"
description = "A universal Python and JavaScript library for building privacy-preserving AI applications"
authors = [
    {name = "AegisProxy",email = "info@aegisproxy.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.poetry]
name = "aegis-sdk"
version = "0.1.0"
description = "A universal Python and JavaScript library for building privacy-preserving AI applications"
authors = ["AegisProxy <info@aegisproxy.com>"]
readme = "README.md"
packages = [{include = "aegis_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
