[project]
name = "aegis-sdk"
version = "0.1.1"
description = "A universal Python and JavaScript library for building privacy-preserving AI applications"
authors = [
    {name = "AegisProxy",email = "info@aegisproxy.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AegisProxy/aegis-sdk"
Repository = "https://github.com/AegisProxy/aegis-sdk"
Changelog = "https://github.com/AegisProxy/aegis-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    # pytest 9+ requires Python >=3.10; CI tests 3.9 as well
    "pytest>=7.0.0,<9",
]

[tool.poetry]
name = "aegis-sdk"
version = "0.1.1"
description = "A universal Python and JavaScript library for building privacy-preserving AI applications"
authors = ["AegisProxy <info@aegisproxy.com>"]
readme = "README.md"
packages = [{include = "aegis_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0,<9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
